--- a/src/MathExpressions/MathExpressions.csproj
+++ b/src/MathExpressions/MathExpressions.csproj
@@ -3,12 +3,15 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <LangVersion>latest</LangVersion>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Description>Library to parse, interprete and compile math expressions</Description>
     <PackageProjectUrl>https://github.com/Dotnet-And-Happiness/MathExpressions</PackageProjectUrl>
     <RepositoryUrl>https://github.com/Dotnet-And-Happiness/MathExpressions</RepositoryUrl>
     <PackageTags>math expressions parser interpreter compiler</PackageTags>
-    <Version>1.0.5</Version>
+    <Version>1.1.0</Version>
+  </PropertyGroup>
+  
+  <PropertyGroup Condition="'$(Configuration)' == 'Release'">
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
 </Project>
